src/sources/forus-webshop/scss/_common/webshop.scss
/* ... */
.wrapper {
    width: 1280px;
    padding: 0 30px;
    max-width: 100%;
    margin: 0 auto;
    display: block;
}

.span-count {
    display: inline;

    &::before {
        content: " (";
    }

    &::after {
        content: ")";
    }
}

.show-sm {
    display: none !important;
}

.f-w {
    width: 100%!important;
}


a[ng-click],
a[ui-sref] {
    cursor: pointer !important;
}

body {
    background-color: #f3f8fe;
    background: linear-gradient(to bottom, #f3f8fe 0%,#feffff 100%);

    display: flex;
    min-height: 100vh;
    flex-direction: column;
    height:100%;

    &.modal-shown {
        overflow: hidden;
    }
}

.printable-qr_code {
    display: none;
}

ui-view{
    flex: 1 0 auto;
    min-height: 85vh;
}

.triangle {
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 9px 10px 9px;
    border-color: transparent transparent #ffffff transparent;
}

.label {
    font: 700 12px/24px $bf;
    display: inline-block;
    padding: 0 15px;
    border-radius: 24px;

    &.label-success {
        background: #2cc6ab;
        color: #fff;
    }

    &.label-warning {
        background: #ffae42;
        color: #fff;
    }

    &.label-default {
        background: #8ca3a6;
        color: #fff;
    }
}

.button {
    font: 700 14px/24px $bf;
    color: #646f79;
    cursor: pointer;
    border: 1px solid transparent;
    padding: 12px 25px;
    transition: color .4s, background .4s, box-shadow .4s, border .4s;
    border-radius: 6px;
    display: inline-block;
    margin-right: 15px;
    text-align: center;

    .mdi {
        font-size: 1.4em;
        line-height: inherit;
        margin-right: 5px;
        float: left;
        transition: .4s;
    }

    img {
        float: left;
        display: block;
        margin: -1px 5px -1px 0;
        transition: .4s;
    }

    &.button-default {
        color: $color_default;
        border: 1px solid $border_color;
        box-shadow: 0 10px 25px rgba(#000, 0);

        .mdi {
            color: $color_default_light;
        }

        &:hover {
            color: #fff;
            background: $color_default_light;
            border-color: $color_default_light;
            box-shadow: 0 10px 20px rgba(#000, .2);

            .mdi {
                color: #fff;
            }
        }
    }

    &.button-primary {
        color: #fff;
        background: $color_primary;
        border: 1px solid $color_primary;
        box-shadow: 0 10px 25px rgba(#000, .15);

        &:hover {
            color: #fff;
            background: $color_primary_light;
            background-color: $color_primary_light;
            box-shadow: 0 10px 20px rgba(#000, .3);

            img {
                filter: brightness(5);
            }
        }
    }

    &.button-dark {
        display: inline-block;
        color: #fff;
        background: #282b39;
        border: 1px solid #282b39;
        box-shadow: 0 10px 25px rgba(#000, .15);

        &:hover {
            color: #fff;
            background: #646f79;
            border-color: #646f79;
            box-shadow: 0 10px 20px rgba(#000, .3);

            img {
                filter: brightness(5);
            }
        }
    }

    &.button-primary-outline {
        color: #2f5bf6;
        border: 1px solid #2f5bf6;
        border-radius: 50px;

        &:hover {
            background: $color_primary;
            color: #fff;
        }
    }


    &.button-wide,
    &.button-wide {
        margin: 0 auto;
    }
    
    &.button-fill {
        width: 100%;
    }

    &.button-wide {
        padding-left: 50px;
        padding-right: 50px;
    }

    &:last-child,
    &:last-of-type {
        margin-right: 0;
    }
}

.map-canvas {
    @include fill_parent();
}

.tooltip-block {
    position: relative;
    display: inline-block;
    padding-right: 15px;
    vertical-align: text-bottom;
    margin-left: 3px;

    .tooltip-icon {
        width: 16px;
        height: 16px;
        background: url('../img/Info.png') no-repeat 50% 50%;
        background-size: contain;
        cursor: pointer;
    }

    .tooltip {
        position: absolute;
        top: 8px;
        transform: translate(0, -50%);
        left: 100%;
        width: 300px;
        border: 1px solid $border_color;
        box-shadow: 0 4px 25px rgba(0, 0, 0, 0.1);
        padding: 15px;
        background: #fff;
        z-index: 5;
        border-radius: 4px;
        font: 500 14px/20px $bf;
        text-transform: none;
        color: #45535e;
        display: none;

        &:after,
        &:before {
            right: 100%;
            top: 50%;
            border: solid transparent;
            content: ' ';
            height: 0;
            width: 0;
            position: absolute;
            pointer-events: none;
        }

        &:after {
            border-color: rgba(255, 255, 255, 0);
            border-right-color: #fff;
            border-width: 10px;
            margin-top: -10px;
        }

        &:before {
            border-color: rgba(210, 230, 255, 0);
            border-right-color: #d2e6ff;
            border-width: 11px;
            margin-top: -11px;
        }
    }

    &:hover {
        .tooltip-icon {
            background-image: url('../img/Info_hover.png');
        }

        .tooltip {
            display: block;
        }
    }
}

.map-card {
    padding-left: 130px;
    padding-top: 5px;
    position: relative;
    min-height: 100px;

    .map-card-img {
        left: 0;
        top: 5px;
        position: absolute;
        display: block;
        width: 110px;
    }

    .map-card-title {
        color: #282b39;
        font: 700 14px/28px $bf;
    }
    
    .map-card-description {
        color: #131418;
        font: 400 11px $bf;

        a {
            font: inherit;
            color: $bc;
        }
    }
}
/* ... */

